--- a/css/outlines.css
+++ b/css/outlines.css
@@ -4,14 +4,18 @@
 }
 
 @font-face {
-    font-family: Gotham-Ultra-Light;
-    src: url(/fonts/GothamSSm-Light.otf);
-}
-@font-face {
     font-family: Gotham-Ultra;
     src: url(/fonts/GothamSSm-Bold.otf);
     font-weight: bold;
 }
+
+
+@font-face {
+    font-family: Gotham-Ultra-Light;
+    src: url(/fonts/GothamSSm-Light.otf);
+}
+
+
 header {
     text-align: left;
     color: white;
@@ -19,10 +23,37 @@ header {
     font-family: Gotham-Ultra-Light, serif;
     padding: 50px;
     background: #584a3d;
+    box-sizing: border-box;
 }
 
-body {
+.header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header__list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.header__item {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.header__title {
+    font-size: 50px;
+    color: white;
+    margin: 0;
+}
+
+html, body {
     background-color: #cec6ba;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 h1 {
@@ -35,4 +66,125 @@ h1 {
 p {
     font-family: verdana, sans-serif;
     font-size: 20px;
+}
+
+main {
+    text-align: left;
+    color: white;
+    font-size: 25px;
+    font-family: Gotham-Ultra-Light, serif;
+    padding: 50px;
+    box-sizing: border-box;
+}
+
+.main__block {
+    background: #584a3d;
+    margin: 50px;
+    padding: 50px;
+    border-radius: 5px;
+}
+
+.main__block__title{
+    color: white;
+    text-align: left;
+    font-size: 50px;
+    font-family: Gotham-Ultra, serif;
+
+}
+
+.main__block__text {
+    color: white;
+    text-align: left;
+    font-size: 25px;
+    font-family: Gotham-Ultra-Light, serif;
+    max-width: 800px
+}
+
+.main__block__list {
+
+}
+
+.main__block__item {
+    padding: 10px;
+    list-style: disc;
+    font-family: Gotham-Ultra-Light, serif;
+    flex: 1;
+}
+
+.main__block__list > .main__block__item:nth-child(3) {
+    margin-bottom: 20px;
+}
+
+.main__block__list > .main__block__item:nth-child(3) ul {
+    padding-left: 20px;
+    list-style-type: circle;
+    margin-top: 10px;
+}
+
+.main__block__list > .main__block__item:nth-child(3) ul li {
+    font-style: italic;
+    margin-bottom: 5px;
+    padding-left: 10px;
+}
+
+.main__block__city {
+    text-align: center;
+    font-size: 40px;
+}
+
+.main__block__link {
+    color: #cec6ba;
+}
+
+.main__block__img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    border: 5px solid #cec6ba;
+}
+
+.reviews {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    margin-bottom: 50px;
+}
+
+.review {
+    width: 45%;
+    background-color: #cec6ba;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.review__text {
+    font-size: 20px;
+    color: #584a3d;
+    font-family: Gotham-Ultra-Light, serif;
+    margin-bottom: 10px;
+}
+
+.review__author {
+    font-size: 18px;
+    color: #ffffff;
+    text-align: right;
+    margin-top: 25px;
+    font-family: Gotham-Ultra-Light, serif;
+}
+
+h4.main__block__title {
+    text-align: center;
+}
+
+article.main__block__text {
+    text-align: center;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.footer__text {
+    text-align: center;
+    font-size: 20px;
+    font-family: Gotham-Ultra-Light, serif;
 }
