--- a/css/outlines.css
+++ b/css/outlines.css
@@ -47,7 +47,7 @@ header {
 
 .header__item {
     display: inline-block;
-    margin-right: 20px;
+    margin-right: 50px;
     /*padding-bottom: 20px;*/
 }
 
@@ -57,11 +57,22 @@ header {
     margin: 0;
 }
 
+.header__item a.active {
+    color: #cec6ba;
+    text-decoration-line: underline;
+}
+
+
 html, body {
     background-color: #cec6ba;
     margin: 0;
     padding: 0;
     width: 100%;
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
 
 h1 {
@@ -98,7 +109,6 @@ main {
     text-align: left;
     font-size: 50px;
     font-family: Gotham-Ultra, serif;
-    text-transform: uppercase;
 }
 
 .block__text {
@@ -235,6 +245,32 @@ article.block__text {
 
 .table__row:nth-child(odd) .table__cell {
     background-color: #ccc4b9;
+}
+.form__button {
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 10px 0;
+    font-family: Gotham-Ultra-Light, serif;
+    font-size: 18px;
+    color: white;
+    background: #584a3d;
+    border: 2px solid #cec6ba;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    text-align: center;
+}
+
+.form__button:hover {
+    background: #cec6ba;
+    color: #584a3d;
+    transform: scale(1.05);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.form__button:active {
+    transform: scale(0.95);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
 
