init: 6 lab finished

--- a/css/outlines.css
+++ b/css/outlines.css
@@ -273,7 +273,81 @@ article.block__text {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
+.preloader {
+    font-size: 20px;
+    color: #333;
+    text-align: center;
+    margin-bottom: 1rem;
+    animation: fadeInOut 1.5s infinite;
+}
 
+.users-table {
+    width: 100%;
+    overflow-x: auto;
+    margin-top: 20px;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+.users-table .table {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0;
+}
+
+.users-table .table__row {
+    display: contents;
+}
+
+.users-table .table__cell {
+    padding: 15px;
+    border: 1px solid #cec6ba;
+    text-align: center;
+    font-family: Gotham-Ultra-Light, serif;
+    font-size: 16px;
+    word-wrap: break-word;
+    background-color: white;
+}
+
+
+.users-table .table__cell.table__header {
+    background-color: #cec6ba;
+    font-weight: bold;
+    font-size: 18px;
+    color: #333;
+}
+
+.users-table .table__row:nth-child(even) .table__cell {
+    background-color: #f9f9f9;
+}
+
+.users-table .table__row:nth-child(odd) .table__cell {
+    background-color: #fff;
+}
+
+.users-table .table__cell {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.preloader {
+    display: block;
+    font-size: 20px;
+    color: #ffffff;
+    text-align: center;
+    margin: 20px 0;
+    animation: fadeInOut 1.5s infinite;
+}
+
+@keyframes fadeInOut {
+    0%, 100% {
+        opacity: 0.2;
+    }
+    50% {
+        opacity: 1;
+    }
+}
 @media screen and (max-width: 650px) {
     .header__list {
         display: none;
